# species-simulator

./: TODO.md  game-of-life.php  index.php  particle-life.php  species-simulator.php  species_simulator.php  style.css  understanding-cellular-automata.php
content/: What is particle life.docx
cpp/evolutionary/: PunkObject.cpp  PunkObject.hpp  PunkOrganism.cpp  PunkOrganism.hpp  PunkSystem.cpp  PunkSystem.hpp  bindings.cpp  cli.cpp  commands.txt  punksystem.js  punksystem.wasm  system.cpp  system.hpp  (+2 more)
desired_output/: evolutionary-simulator.php  game-of-life.php  particle-life.php  real.php  species-simulator.php  species_simulator.php  understanding-cellular-automata.php
en/: index.php  style.css
fr/: bees-and-hornets.php  index.php  style.css
new/: differential-equations.php  game-of-life.php  lotka-volterra.php  newick.php  particle-life.php  polytopia.php  site-guide.php  site-header.php  site-side.php  species-simulator.php  synthetic-data-artificial-genomes.php  tree-fossil-generator.php
old/: style.css
output/: evolutionary-simulator.php  game-of-life.php  particle-life.php  species-simulator.php  understanding-cellular-automata.php
page-generation/: .generator.py.swp  .loader.py.swp  .main.py.swp  generator.py  loader.py  main.py
rs/evolutionary-enginge-rapier/: Cargo.toml  mover.bat
rs/evolutionary-enginge-rapier/src/: example.rs  lib.rs  main.rs
rs/evolutionary-enginge-rapier/src/punk/: mod.rs  punk_object.rs  punk_organism.rs  punk_system.rs
scripts/: simulation_resize.js
src/: google-tag.php  igem.php  index.php  layout.php  style.css
(+183 files in other folders)
