[package]
name = "evolutionary-enginge-rapier"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
rapier2d = { version = "0.17.2", features = [ "simd-stable" ] }
wasm-bindgen = "0.2"
serde_json = "1.0.94"
getrandom = { version = "0.2", features = ["js"] }
rand = "0.8.5"